syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.responses.dailyQuestion";
option java_multiple_files = true;

package responses;

message CheckAnswerResponse {
    int32 hasAnswer = 1;
    string answer = 2;
}
